Staff and tasks APIs
