# ruby/swagger/v1/swagger.yaml
@@ -350,6 +350,68 @@ paths:
                   error:
                     type: string
                     example: Unauthorized
+                    /api/v1/users/index_students:
+  /api/v1/user/index_students:
+    get:
+      summary: List all students
+      description: Retrieve a list of all users with the role of "student"
+      tags:
+        - User
+      security:
+        - BearerAuth: []
+      responses:
+        '200':
+          description: A list of students
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      example: 1
+                    id_number:
+                      type: string
+                      example: 123456
+                    email:
+                      type: string
+                      example: student@example.com
+                    first_name:
+                      type: string
+                      example: John
+                    middle_name:
+                      type: string
+                      example: A.
+                    last_name:
+                      type: string
+                      example: Doe
+                    birthday:
+                      type: string
+                      format: date
+                      example: "1990-01-01"
+                    course:
+                      type: string
+                      example: Computer Science
+                    contact_number:
+                      type: string
+                      example: +1234567890
+                    emergency_contact:
+                      type: string
+                      example: Jane Doe
+                    emergency_contact_number:
+                      type: string
+                      example: +0987654321
+                    role:
+                      type: string
+                      example: student
+                    is_available:
+                      type: boolean
+                      example: true
+                    profile_photo_path:
+                      type: string
+                      example: /rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBd0E9IiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--f2b2c2e2
   /api/v1/time_entries:
     get:
       summary: Get User Time Entries
@@ -920,4 +982,187 @@ paths:
                   error:
                     type: string
                     example: Task not found
-                                               
+  /api/v1/staffs:
+    get:
+      summary: List all staff
+      description: Retrieve a list of all staff members
+      tags:
+        - Staff
+      security:
+      - BearerAuth: []
+      responses:
+        '200':
+          description: A list of staff members
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      example: 1
+                    first_name:
+                      type: string
+                      example: John
+                    middle_name:
+                      type: string
+                      example: A.
+                    last_name:
+                      type: string
+                      example: Doe
+                    designation:
+                      type: string
+                      example: Manager
+    post:
+      summary: Create a new staff member
+      description: Create a new staff member with the specified details
+      tags:
+        - Staff
+      security:
+      - BearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                first_name:
+                  type: string
+                  example: John
+                middle_name:
+                  type: string
+                  example: A.
+                last_name:
+                  type: string
+                  example: Doe
+                designation:
+                  type: string
+                  example: Manager
+      responses:
+        '201':
+          description: Staff member created successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 1
+                  first_name:
+                    type: string
+                    example: John
+                  middle_name:
+                    type: string
+                    example: A.
+                  last_name:
+                    type: string
+                    example: Doe
+                  designation:
+                    type: string
+                    example: Manager
+        '422':
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: array
+                    items:
+                      type: string
+                      example: "can't be blank"
+  /api/v1/staffs/{id}:
+    put:
+      summary: Update a staff member
+      description: Update the details of a specific staff member
+      tags:
+        - Staff
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                first_name:
+                  type: string
+                  example: John
+                middle_name:
+                  type: string
+                  example: A.
+                last_name:
+                  type: string
+                  example: Doe
+                designation:
+                  type: string
+                  example: Manager
+      responses:
+        '200':
+          description: Staff member updated successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 1
+                  first_name:
+                    type: string
+                    example: John
+                  middle_name:
+                    type: string
+                    example: A.
+                  last_name:
+                    type: string
+                    example: Doe
+                  designation:
+                    type: string
+                    example: Manager
+        '422':
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: array
+                    items:
+                      type: string
+                      example: "can't be blank"
+    delete:
+      summary: Delete a staff member
+      description: Delete a specific staff member
+      tags:
+        - Staff
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: Staff member deleted successfully
+        '404':
+          description: Staff member not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Staff member not found
